# apis

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
client/: BUILD.bazel  main.go
proto/enum/access_tier/v5/: BUILD.bazel  access_tier.pb.go  access_tier.proto  access_tier_grpc.pb.go
proto/hello_world/: BUILD.bazel  hello_world.pb.go
proto/hello_world/v1/: BUILD.bazel  hello_world.pb.go  hello_world.pb.gw.go  hello_world.proto  hello_world_grpc.pb.go
proxy/: BUILD.bazel  main.go
scripts/bazel/: add_bzlmod_support.patch
server/: BUILD.bazel  main.go
