load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "proxy_lib",
    srcs = ["main.go"],
    importpath = "github.com/abitofhelp/apis/proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/hello_world/v1:hello_world",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "proxy",
    embed = [":proxy_lib"],
    visibility = ["//visibility:public"],
)
